apps/syncthing/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: syncthing
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`syncthing.trivernis.dev`, `syncthing.trivernis.net`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: syncthing
      port: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: listen
  namespace: syncthing
spec:
  entryPoints:
    - sct-listen
  routes:
  - match: HostSNI(`*`)
    services:
    - name: syncthing-listen
      port: listen
